//
// Copyrights (c)  2017, Juniper Networks, Inc.
// All rights reserved.
//

//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//

//
// This file defines the messages in Protocol Buffers format used by
// the EDFA. The-top level messages is OpticalEdfa.
//

//Oplink 11/11/2019 - upgrade to proto 3

syntax = "proto3";

//
// Top-level message
//
message OpticalEdfa
{
    repeated OpticalEdfaInfo edfa_info      = 1;
}

message OpticalEdfaInfo 
{
    // EDFA Id
    int32              edfa_id                 = 1;

    // Maintenance State
    int32              maint_state             = 2;

    // Operational State
    int32              oper_state              = 3;

    // Control Mode
    int32              ctrl_mode               = 4;

    // Gain Switch Mode
    int32              gain_switch_mode        = 5;

    // Target Gain
    double             target_gain             = 6;

    // Target Gain Tilt
    double             target_gain_tilt        = 7;

    // Input Power
    double             pwr_in                  = 8;

    // Output Power
    double             pwr_out                 = 9;

    // Actual Gain
    double             measured_gain           = 10;
}
