//
// Copyrights (c)  2017, Juniper Networks, Inc.
// All rights reserved.
//

//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//

//
// This file defines the messages in Protocol Buffers format used by
// the optical port. The-top level messages is OpticalPort.
//

//Oplink 11/11/2019 - upgrade to proto 3

syntax = "proto3";

message OpticalPortOch
{
    // OCH Provisioned Start Frequency
    double             och_prov_start_freq = 1;

    // OCH Actual Frequency
    double             och_measured_freq   = 2;

    // OCH Power
    double             och_measured_pwr    = 3;
}

message OpticalPortOsc
{
    // OSC Wavelength
    double             osc_wavelength  = 1;

    // OSC Input Power
    double             osc_pwr_in      = 2;

    // OSC Output Power
    double             osc_pwr_out     = 3;
}

message OpticalPortInfo 
{
    // Input Total Power
    double             total_pwr_in            = 1;

    // Output Total Power
    double             total_pwr_out           = 2;

    // Input OMS Power
    double             oms_pwr_in              = 3;

    // Output OMS Power
    double             oms_pwr_out             = 4;

    // OSC Info
    repeated OpticalPortOsc     osc_info                = 5;

    // OCH In Power
    repeated OpticalPortOch     och_info_in             = 6;

    // OCH Out Power
    repeated OpticalPortOch     och_info_out            = 7;
  
    // OMS BackReflection Power
    double             oms_backreflection_pwr  = 8;

    // Return Loss
    double             oms_return_loss         = 9;
}
