//
// Copyrights (c)  2017, Juniper Networks, Inc.
// All rights reserved.
//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//
//
// This file defines the messages in Optical Buffers used by
// the Optical interface. The top-level message is OpticalStream.
//

//Oplink 11/11/2019 - upgrade to proto 3

syntax = "proto3";

import "optical_port_managed.proto";
import "optical_port_unmanaged.proto";
import "optical_edfa.proto";
import "optical_voa.proto";

message OpticalStream 
{
    // device IP address
    string         system_id            = 1;

    // timestamp (milliseconds since 00:00:00 UTC 1/1/1970)
    uint64         timestamp            = 2;

    // sequence number, monotonically increasing for each system_id
    uint32         sequence_number      = 3;

    // major version
    uint32         version_major        = 4;

    // minor version
    uint32         version_minor        = 5;

    OpticalData    optical_telemetry_data = 100;
}

message OpticalData 
{
   repeated OpticalManagedPort managed_port = 1;
   repeated OpticalUnmanagedPort unmanaged_port = 2;
   OpticalEdfa edfas = 3;
   OpticalVoa voas = 4; 
}
