//
// Copyrights (c)  2017, Juniper Networks, Inc.
// All rights reserved.
//

//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//

//
// This file defines the messages in Protocol Buffers format used by
// the VOA. The-top level messages is OpticalVoa.
//

//Oplink 11/11/2019 - upgrade to proto 3

syntax = "proto3";

//
// Top-level message
//
message OpticalVoa
{
    repeated OpticalVoaInfo voa_info      = 1;
}

message OpticalVoaInfo 
{
    // VOA Id
    int32              voa_id              = 1;

    // VOA Target Attenuation (as provisioned)
    double             target_atten        = 2;

    // VOA Input Power
    double             pwr_in              = 3;

    // VOA Ouput Power
    double             pwr_out             = 4;

    // VOA Actual Attenuation
    double             measured_atten      = 5;
}
